@@ -3,6 +3,7 @@ Issue #1068 New-BcImage doesn't run on Windows Server 2016
 Write Warning when creating new container based on imagename without artifacts
 Issue #1047 Download-Artifacts folder rename fails as folder is probably blocked by anti virus - add retry
 Added Database options to CreateScript / New-BcContainerWizard
+Add support for configuration file C:\ProgramData\NavContainerHelper\NavContainerHelper.config.json to allow for global configurations (bcartifactsCacheFolder for now)
 
 0.7.0.10
 Issue #1043 Removal of AAD application needs to use case insensitive search
